Fix blurry image

--- a/css/custom.css
+++ b/css/custom.css
@@ -86,6 +86,7 @@
 }
 
 .reveal section img.big-img {
+  transform: translateZ(0);
   max-height: 500px;
   margin-top: 20px;
 }
